--- a/index.html
+++ b/index.html
@@ -812,20 +812,28 @@
       { x:  2019, z:   188, y:  83, iconPath: '/icons/coal.png'         },
       { x: -1873, z:  -305, y: 164, iconPath: '/icons/quartz.png'       },
 
-      { x:  2275, z:  -410, textFillStyle: '#f35e0e', textSizeMap: 100, text: 'Oranjestad'         },
-      { x:  2492, z:  -310, textFillStyle: '#8be6f0', textSizeMap: 100, text: 'Ironhill'           },
+      { x:  -996, z:  -773, textFillStyle: '#26a38c', textSizeMap: 100, text: 'USGS'               },
       { x:   -59, z:  1506, textFillStyle: '#559b16', textSizeMap: 100, text: 'The SWTZ'           },
       { x:  3049, z:  1277, textFillStyle: '#56935b', textSizeMap: 100, text: 'Harvestspire'       },
-      { x: -2363, z:   524, textFillStyle: '#32ed22', textSizeMap: 100, text: 'El Gran Cartel'     },
-      { x: -1387, z:  -949, textFillStyle: '#bbdc65', textSizeMap: 100, text: 'Helioria'           },
       { x:  1722, z:  -416, textFillStyle: '#6767ea', textSizeMap: 100, text: 'Polestar'           },
       { x:  -113, z: -1342, textFillStyle: '#43a6d9', textSizeMap: 100, text: 'Pantha'             },
-      { x: -2910, z: - 543, textFillStyle: '#d1502f', textSizeMap: 100, text: 'Soup Bowl'          },
       { x:  1583, z: -1323, textFillStyle: '#8667de', textSizeMap: 100, text: 'Penguinia'          },
+      { x:  2275, z:  -410, textFillStyle: '#f35e0e', textSizeMap:  65, text: 'Oranjestad'         },
+      { x:  2492, z:  -310, textFillStyle: '#8be6f0', textSizeMap:  65, text: 'Ironhill'           },
+      { x: -2910, z: - 543, textFillStyle: '#d1502f', textSizeMap:  45, text: 'Soup Bowl'          },
+      { x:  2951, z:  -832, textFillStyle: '#ffff00', textSizeMap:  45, text: 'Pebbleopolis'       },
+      { x:   755, z:  1181, textFillStyle: '#cefc64', textSizeMap:  45, text: 'Prinzenburg'        },
+      { x:   272, z:    83, textFillStyle: '#649cce', textSizeMap:  45, text: 'Aeterna Island'     },
+      { x:  2091, z:   -64, textFillStyle: '#52844f', textSizeMap:  45, text: 'Hidden Leaf'        },
+      { x:  -642, z: -1010, textFillStyle: '#9587d3', textSizeMap:  45, text: 'Eluphenia'          },
 
-      { x:  2951, z:  -832, textFillStyle: '#ffff00', textSizeMap: 100, text: 'Pebbleopolis'       },
+      { x: -1387, z:  -949, textFillStyle: '#bbdc65', textSizeMap: 100, text: 'Helioria'           },
+      { x: -1412, z: -1215, textFillStyle: '#bbdc65', textSizeMap:  65, text: 'Solaris'            },
 
-      { x:   755, z:  1181, textFillStyle: '#649cce', textSizeMap: 100, text: 'Prinzenburg'        },
+      { x: -2363, z:   524, textFillStyle: '#32ed22', textSizeMap: 100, text: 'El Gran Cartel'     },
+
+      { x:  -330, z: -1020, textFillStyle: '#ffff00', textSizeMap:  65, text: 'Velmora'            },
+      { x:  -441, z:  -961, textFillStyle: '#ffff00', textSizeMap:  45, text: 'Tower of Wealth'            },
 
       { x:  2553, z: -1452, textFillStyle: '#fe3333', textSizeMap: 100, text: 'Northelios'         },
       { x:  2415, z: -1329, textFillStyle: '#fe3333', textSizeMap:  65, text: 'Snowlandia'         },
@@ -833,8 +841,6 @@
       { x:  2268, z:  -751, textFillStyle: '#f300f3', textSizeMap: 100, text: 'Renkai'             },
       { x:  2409, z: -1033, textFillStyle: '#f300f3', textSizeMap:  65, text: 'Kokai'              },
       { x:  2429, z:  -553, textFillStyle: '#f300f3', textSizeMap:  65, text: 'Hoseki'             },
-
-      { x:  2091, z:   -64, textFillStyle: '#52844f', textSizeMap: 100, text: 'Hidden Leaf'        },
 
       { x:  2683, z:   452, textFillStyle: '#de8644', textSizeMap: 100, text: 'Imperium'           },
       { x:  2865, z:   319, textFillStyle: '#de8644', textSizeMap:  65, text: 'Sideris'            },
@@ -849,22 +855,22 @@
       { x:  1141, z:   411, textFillStyle: '#b9bbcc', textSizeMap:  45, text: 'Wallachia'          },
       { x:  1563, z:   689, textFillStyle: '#b9bbcc', textSizeMap:  65, text: 'House of Cards'     },
 
-      { x:   700, z:    70, textFillStyle: '#f90120', textSizeMap: 100, text: 'Sarkovia'           },
+      { x:   800, z:    96, textFillStyle: '#f90120', textSizeMap: 100, text: 'Sarkovia'           },
       { x:   867, z:   283, textFillStyle: '#f90120', textSizeMap:  65, text: 'Metalgrad'          },
       { x:   986, z:  -167, textFillStyle: '#f90120', textSizeMap:  65, text: 'Krasnygrad'         },
       { x:   858, z:  -478, textFillStyle: '#f90120', textSizeMap:  65, text: 'Flussdorf'          },
       { x:  1286, z:  -322, textFillStyle: '#f90120', textSizeMap:  65, text: 'Rotstadt'           },
 
-      { x:  -505, z:   515, textFillStyle: '#ffdd33', textSizeMap: 100, text: 'Kingdom of Chimera' },
-      { x: -2210, z:  1023, textFillStyle: '#ffdd33', textSizeMap:  65, text: 'White Harbour'      },
-      { x: -1730, z:   734, textFillStyle: '#ffdd33', textSizeMap:  65, text: 'Heraclesia'         },
-      { x: -1448, z:   523, textFillStyle: '#ffdd33', textSizeMap:  65, text: 'Aramore'            },
-      { x: -1500, z:   400, textFillStyle: '#ffdd33', textSizeMap:  45, text: 'Toprock'            },
-      { x: -1840, z:   177, textFillStyle: '#ffdd33', textSizeMap:  65, text: 'Northport'          },
-      { x:  -432, z:   710, textFillStyle: '#ffdd33', textSizeMap:  65, text: 'Wolframstein'       },
-      { x:  -566, z:   247, textFillStyle: '#ffdd33', textSizeMap:  65, text: 'Saorsa'             },
-      { x:  -129, z:   300, textFillStyle: '#ffdd33', textSizeMap:  65, text: 'Colodore Order'     },
-      { x:  -181, z:  -285, textFillStyle: '#ffdd33', textSizeMap:  65, text: 'Horizon'            },
+      { x:  -505, z:   515, textFillStyle: '#edc600', textSizeMap: 100, text: 'Kingdom of Chimera' },
+      { x: -2210, z:  1023, textFillStyle: '#edc600', textSizeMap:  65, text: 'White Harbour'      },
+      { x: -1730, z:   734, textFillStyle: '#edc600', textSizeMap:  65, text: 'Heraclesia'         },
+      { x: -1448, z:   523, textFillStyle: '#edc600', textSizeMap:  65, text: 'Aramore'            },
+      { x: -1500, z:   400, textFillStyle: '#edc600', textSizeMap:  45, text: 'Toprock'            },
+      { x: -1840, z:   177, textFillStyle: '#edc600', textSizeMap:  65, text: 'Northport'          },
+      { x:  -432, z:   710, textFillStyle: '#edc600', textSizeMap:  65, text: 'Wolframstein'       },
+      { x:  -566, z:   247, textFillStyle: '#edc600', textSizeMap:  65, text: 'Saorsa'             },
+      { x:  -129, z:   300, textFillStyle: '#edc600', textSizeMap:  65, text: 'Colodore Order'     },
+      { x:  -181, z:  -285, textFillStyle: '#edc600', textSizeMap:  65, text: 'Horizon'            },
     ];
 
     document.addEventListener('keydown', e => {
