--- a/index.html
+++ b/index.html
@@ -811,66 +811,95 @@
       { x:  1725, z:   825, y: 116, iconPath: '/icons/coal.png'         },
       { x:  2019, z:   188, y:  83, iconPath: '/icons/coal.png'         },
       { x: -1873, z:  -305, y: 164, iconPath: '/icons/quartz.png'       },
+      { x: -1265, z:   673, y:  70, iconPath: '/icons/gold_ingot.png'   },
+      { x: -2717, z:   559, y: 106, iconPath: '/icons/copper_ingot.png' },
+      { x:  1554, z: -1130, y:  15, iconPath: '/icons/lava_bucket.png'  },
 
-      { x:  -996, z:  -773, textFillStyle: '#26a38c', textSizeMap: 100, text: 'USGS'               },
-      { x:   -59, z:  1506, textFillStyle: '#559b16', textSizeMap: 100, text: 'The SWTZ'           },
-      { x:  3049, z:  1277, textFillStyle: '#56935b', textSizeMap: 100, text: 'Harvestspire'       },
-      { x:  1722, z:  -416, textFillStyle: '#6767ea', textSizeMap: 100, text: 'Polestar'           },
-      { x:  -113, z: -1342, textFillStyle: '#43a6d9', textSizeMap: 100, text: 'Pantha'             },
-      { x:  1583, z: -1323, textFillStyle: '#8667de', textSizeMap: 100, text: 'Penguinia'          },
-      { x:  2275, z:  -410, textFillStyle: '#f35e0e', textSizeMap:  65, text: 'Oranjestad'         },
-      { x:  2492, z:  -310, textFillStyle: '#8be6f0', textSizeMap:  65, text: 'Ironhill'           },
-      { x: -2910, z: - 543, textFillStyle: '#d1502f', textSizeMap:  45, text: 'Soup Bowl'          },
-      { x:  2951, z:  -832, textFillStyle: '#ffff00', textSizeMap:  45, text: 'Pebbleopolis'       },
-      { x:   755, z:  1181, textFillStyle: '#cefc64', textSizeMap:  45, text: 'Prinzenburg'        },
-      { x:   272, z:    83, textFillStyle: '#649cce', textSizeMap:  45, text: 'Aeterna Island'     },
-      { x:  2091, z:   -64, textFillStyle: '#52844f', textSizeMap:  45, text: 'Hidden Leaf'        },
-      { x:  -642, z: -1010, textFillStyle: '#9587d3', textSizeMap:  45, text: 'Eluphenia'          },
+      { x:  -996, z:  -773, textFillStyle: '#26a38c', textSizeMap: 100, text: 'USGS'                      },
+      { x:  3049, z:  1277, textFillStyle: '#56935b', textSizeMap: 100, text: 'Harvestspire'              },
+      { x:  -113, z: -1342, textFillStyle: '#43a6d9', textSizeMap: 100, text: 'Pantha'                    },
+      { x:  1583, z: -1323, textFillStyle: '#8667de', textSizeMap: 100, text: 'Penguinia'                 },
+      { x:  2275, z:  -410, textFillStyle: '#f35e0e', textSizeMap:  65, text: 'Oranjestad'                },
+      { x:  2492, z:  -310, textFillStyle: '#8be6f0', textSizeMap:  65, text: 'Ironhill'                  },
+      { x:  2951, z:  -832, textFillStyle: '#ffff00', textSizeMap:  65, text: 'Pebbleopolis'              },
+      { x:   755, z:  1181, textFillStyle: '#cefc64', textSizeMap:  45, text: 'Prinzenburg'               },
+      { x:   272, z:    83, textFillStyle: '#649cce', textSizeMap:  45, text: 'Aeterna Island'            },
+      { x:  2091, z:   -64, textFillStyle: '#52844f', textSizeMap:  45, text: 'Hidden Leaf'               },
+      { x:  -642, z: -1010, textFillStyle: '#9587d3', textSizeMap:  45, text: 'Eluphenia'                 },
+      { x: -2087, z:   585, textFillStyle: '#6b4f8e', textSizeMap:  45, text: 'Viking Island'             },
 
-      { x: -1387, z:  -949, textFillStyle: '#bbdc65', textSizeMap: 100, text: 'Helioria'           },
-      { x: -1412, z: -1215, textFillStyle: '#bbdc65', textSizeMap:  65, text: 'Solaris'            },
+      { x:  1722, z:  -416, textFillStyle: '#6767ea', textSizeMap: 100, text: 'Polestar'                  },
 
-      { x: -2363, z:   524, textFillStyle: '#32ed22', textSizeMap: 100, text: 'El Gran Cartel'     },
+      { x:  1496, z:   -43, textFillStyle: '#de942c', textSizeMap:  65, text: 'T.E.A. Alliance'           },
 
-      { x:  -330, z: -1020, textFillStyle: '#ffff00', textSizeMap:  65, text: 'Velmora'            },
-      { x:  -441, z:  -961, textFillStyle: '#ffff00', textSizeMap:  45, text: 'Tower of Wealth'            },
+      { x:  -456, z:  1504, textFillStyle: '#e1aa37', textSizeMap:  65, text: 'Golden Prosperity'         },
+      { x:  -409, z:  1586, textFillStyle: '#e1aa37', textSizeMap:  45, text: 'Big Stump'                 },
 
-      { x:  2553, z: -1452, textFillStyle: '#fe3333', textSizeMap: 100, text: 'Northelios'         },
-      { x:  2415, z: -1329, textFillStyle: '#fe3333', textSizeMap:  65, text: 'Snowlandia'         },
+      { x:    60, z:  1556, textFillStyle: '#559b16', textSizeMap:  65, text: 'The SWTZ'                  },
+      { x:   -14, z:  1632, textFillStyle: '#559b16', textSizeMap:  45, text: 'Bastion'                   },
 
-      { x:  2268, z:  -751, textFillStyle: '#f300f3', textSizeMap: 100, text: 'Renkai'             },
-      { x:  2409, z: -1033, textFillStyle: '#f300f3', textSizeMap:  65, text: 'Kokai'              },
-      { x:  2429, z:  -553, textFillStyle: '#f300f3', textSizeMap:  65, text: 'Hoseki'             },
+      { x:   160, z:  1735, textFillStyle: '#c1ff0b', textSizeMap:  65, text: 'Slobland'                  },
 
-      { x:  2683, z:   452, textFillStyle: '#de8644', textSizeMap: 100, text: 'Imperium'           },
-      { x:  2865, z:   319, textFillStyle: '#de8644', textSizeMap:  65, text: 'Sideris'            },
-      { x:  2757, z:   613, textFillStyle: '#de8644', textSizeMap:  65, text: 'Se Lang Mur'        },
+      { x: -2764, z: -1130, textFillStyle: '#ec67cc', textSizeMap: 100, text: 'Nation of the People'      },
+      { x: -3052, z:  -989, textFillStyle: '#ec67cc', textSizeMap:  65, text: 'Havenstead'                },
+      { x: -2981, z:  -807, textFillStyle: '#ec67cc', textSizeMap:  65, text: 'Thornspire'                },
+      { x: -2446, z:  -511, textFillStyle: '#ec67cc', textSizeMap:  65, text: 'Midas Village'             },
+      { x: -3202, z:  -606, textFillStyle: '#ec67cc', textSizeMap:  65, text: 'TASC Island'               },
+      { x: -2539, z:  -855, textFillStyle: '#ec67cc', textSizeMap:  65, text: 'Scyllanthos'               },
 
-      { x:  2693, z:   989, textFillStyle: '#fffa96', textSizeMap: 100, text: 'Universale'         },
-      { x:  2511, z:  1111, textFillStyle: '#fffa96', textSizeMap:  65, text: 'Venican'            },
+      { x: -2938, z:  -483, textFillStyle: '#d1502f', textSizeMap: 100, text: 'Soup Bowl'                 },
 
-      { x:  1650, z:  1043, textFillStyle: '#b9bbcc', textSizeMap: 100, text: 'Checkerboard Union' },
-      { x:  1587, z:   308, textFillStyle: '#b9bbcc', textSizeMap:  65, text: 'Steej'              },
-      { x:  1277, z:   570, textFillStyle: '#b9bbcc', textSizeMap:  65, text: 'The Great Wall'     },
-      { x:  1141, z:   411, textFillStyle: '#b9bbcc', textSizeMap:  45, text: 'Wallachia'          },
-      { x:  1563, z:   689, textFillStyle: '#b9bbcc', textSizeMap:  65, text: 'House of Cards'     },
+      { x: -3120, z:   561, textFillStyle: '#4b8dae', textSizeMap: 100, text: 'Rainveil'                  },
+      { x: -3057, z:   422, textFillStyle: '#4b8dae', textSizeMap:  65, text: 'Viracocha Port'            },
 
-      { x:   800, z:    96, textFillStyle: '#f90120', textSizeMap: 100, text: 'Sarkovia'           },
-      { x:   867, z:   283, textFillStyle: '#f90120', textSizeMap:  65, text: 'Metalgrad'          },
-      { x:   986, z:  -167, textFillStyle: '#f90120', textSizeMap:  65, text: 'Krasnygrad'         },
-      { x:   858, z:  -478, textFillStyle: '#f90120', textSizeMap:  65, text: 'Flussdorf'          },
-      { x:  1286, z:  -322, textFillStyle: '#f90120', textSizeMap:  65, text: 'Rotstadt'           },
+      { x: -1387, z:  -949, textFillStyle: '#bbdc65', textSizeMap: 100, text: 'Helioria'                  },
+      { x: -1412, z: -1215, textFillStyle: '#bbdc65', textSizeMap:  65, text: 'Solaris'                   },
 
-      { x:  -505, z:   515, textFillStyle: '#edc600', textSizeMap: 100, text: 'Kingdom of Chimera' },
-      { x: -2210, z:  1023, textFillStyle: '#edc600', textSizeMap:  65, text: 'White Harbour'      },
-      { x: -1730, z:   734, textFillStyle: '#edc600', textSizeMap:  65, text: 'Heraclesia'         },
-      { x: -1448, z:   523, textFillStyle: '#edc600', textSizeMap:  65, text: 'Aramore'            },
-      { x: -1500, z:   400, textFillStyle: '#edc600', textSizeMap:  45, text: 'Toprock'            },
-      { x: -1840, z:   177, textFillStyle: '#edc600', textSizeMap:  65, text: 'Northport'          },
-      { x:  -432, z:   710, textFillStyle: '#edc600', textSizeMap:  65, text: 'Wolframstein'       },
-      { x:  -566, z:   247, textFillStyle: '#edc600', textSizeMap:  65, text: 'Saorsa'             },
-      { x:  -129, z:   300, textFillStyle: '#edc600', textSizeMap:  65, text: 'Colodore Order'     },
-      { x:  -181, z:  -285, textFillStyle: '#edc600', textSizeMap:  65, text: 'Horizon'            },
+      { x: -2988, z:   858, textFillStyle: '#32ed22', textSizeMap: 100, text: 'El Gran Cartel'            },
+      { x: -2388, z:   659, textFillStyle: '#32ed22', textSizeMap:  45, text: 'Zanco Ciudad'              },
+      { x: -2665, z:   739, textFillStyle: '#32ed22', textSizeMap:  65, text: 'La Mejora'                 },
+
+      { x:  -330, z: -1020, textFillStyle: '#ffff00', textSizeMap:  65, text: 'Velmora'                   },
+      { x:  -441, z:  -961, textFillStyle: '#ffff00', textSizeMap:  45, text: 'Tower of Wealth'           },
+
+      { x:  2553, z: -1452, textFillStyle: '#fe3333', textSizeMap: 100, text: 'Northelios'                },
+      { x:  2415, z: -1329, textFillStyle: '#fe3333', textSizeMap:  65, text: 'Snowlandia'                },
+
+      { x:  2268, z:  -751, textFillStyle: '#f300f3', textSizeMap: 100, text: 'Renkai'                    },
+      { x:  2409, z: -1033, textFillStyle: '#f300f3', textSizeMap:  65, text: 'Kokai'                     },
+      { x:  2429, z:  -553, textFillStyle: '#f300f3', textSizeMap:  65, text: 'Hoseki'                    },
+
+      { x:  2683, z:   452, textFillStyle: '#de8644', textSizeMap: 100, text: 'Imperium'                  },
+      { x:  2865, z:   319, textFillStyle: '#de8644', textSizeMap:  65, text: 'Sideris'                   },
+      { x:  2757, z:   613, textFillStyle: '#de8644', textSizeMap:  65, text: 'Se Lang Mur'               },
+
+      { x:  2693, z:   989, textFillStyle: '#fffa96', textSizeMap: 100, text: 'Universale'                },
+      { x:  2511, z:  1111, textFillStyle: '#fffa96', textSizeMap:  65, text: 'Venican'                   },
+
+      { x:  1650, z:  1043, textFillStyle: '#b9bbcc', textSizeMap: 100, text: 'Checkerboard Union'        },
+      { x:  1587, z:   308, textFillStyle: '#b9bbcc', textSizeMap:  65, text: 'Steej'                     },
+      { x:  1277, z:   570, textFillStyle: '#b9bbcc', textSizeMap:  65, text: 'The Great Wall'            },
+      { x:  1141, z:   411, textFillStyle: '#b9bbcc', textSizeMap:  45, text: 'Wallachia'                 },
+      { x:  1563, z:   689, textFillStyle: '#b9bbcc', textSizeMap:  65, text: 'House of Cards'            },
+
+      { x:   800, z:    96, textFillStyle: '#f90120', textSizeMap: 100, text: 'Sarkovia'                  },
+      { x:   867, z:   283, textFillStyle: '#f90120', textSizeMap:  65, text: 'Metalgrad'                 },
+      { x:   986, z:  -167, textFillStyle: '#f90120', textSizeMap:  65, text: 'Krasnygrad'                },
+      { x:   858, z:  -478, textFillStyle: '#f90120', textSizeMap:  65, text: 'Flussdorf'                 },
+      { x:  1286, z:  -322, textFillStyle: '#f90120', textSizeMap:  65, text: 'Rotstadt'                  },
+
+      { x:   615, z:  -792, textFillStyle: '#0868a4', textSizeMap:  45, text: 'Fallen Temple of the Node' },
+
+      { x:  -505, z:   515, textFillStyle: '#edc600', textSizeMap: 100, text: 'Kingdom of Chimera'        },
+      { x: -2210, z:  1023, textFillStyle: '#edc600', textSizeMap:  65, text: 'White Harbour'             },
+      { x: -1730, z:   734, textFillStyle: '#edc600', textSizeMap:  65, text: 'Heraclesia'                },
+      { x: -1448, z:   523, textFillStyle: '#edc600', textSizeMap:  65, text: 'Aramore'                   },
+      { x: -1500, z:   400, textFillStyle: '#edc600', textSizeMap:  45, text: 'Toprock'                   },
+      { x: -1840, z:   177, textFillStyle: '#edc600', textSizeMap:  65, text: 'Northport'                 },
+      { x:  -432, z:   710, textFillStyle: '#edc600', textSizeMap:  65, text: 'Wolframstein'              },
+      { x:  -566, z:   247, textFillStyle: '#edc600', textSizeMap:  65, text: 'Saorsa'                    },
+      { x:  -129, z:   300, textFillStyle: '#edc600', textSizeMap:  65, text: 'Colodore Order'            },
+      { x:  -181, z:  -285, textFillStyle: '#edc600', textSizeMap:  65, text: 'Horizon'                   },
     ];
 
     document.addEventListener('keydown', e => {
